Bug 61133 - [regression] Weston blocks indefinitely in x11_output_wait_for_map() on raw X server
Summary: [regression] Weston blocks indefinitely in x11_output_wait_for_map() on raw X...
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium blocker
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-19 19:52 UTC by U. Artie Eoff
Modified: 2013-02-21 14:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2013-02-19 19:52:52 UTC
When launching Weston on a raw X server (i.e. no window/display manager), Weston blocks indefinitely in x11_output_wait_for_map and never maps onto the X display:

(gdb) bt
#0  0x00000037632e8bdf in poll () from /lib64/libc.so.6
#1  0x0000003767209f22 in ?? () from /lib64/libxcb.so.1
#2  0x000000376720b6af in xcb_wait_for_event () from /lib64/libxcb.so.1
#3  0x00007f72e8e20087 in x11_output_wait_for_map (c=0x7def20, output=0x8196f0) at compositor-x11.c:510
#4  0x00007f72e8e20d12 in x11_compositor_create_output (c=0x7def20, x=0, y=0, width=1024, height=640,
    fullscreen=0, no_input=0, configured_name=0x0, transform=0) at compositor-x11.c:772
#5  0x00007f72e8e22cc7 in x11_compositor_create (display=0x7d9aa0, fullscreen=0, no_input=0, use_pixman=0,
    argc=1, argv=0x7fff9715a0d8, config_file=0x7da400 "/home/uartie/.config/weston.ini") at compositor-x11.c:1423
#6  0x00007f72e8e2348c in backend_init (display=0x7d9aa0, argc=1, argv=0x7fff9715a0d8,
    config_file=0x7da400 "/home/uartie/.config/weston.ini") at compositor-x11.c:1561
#7  0x00000000004120ae in main (argc=1, argv=0x7fff9715a0d8) at compositor.c:3422

It appears Weston never receives a XCB_CONFIGURE_NOTIFY event on a raw X server.  It runs fine under a gnome X session.

Steps:
1. X -noreset :666 & sleep 1 && DISPLAY=:666 weston

First bad commit is:
http://cgit.freedesktop.org/wayland/weston/commit/?id=8e7adbff68d0ecc2b5124279f7c45cbd75feb2d1
Comment 1 Kristian Høgsberg 2013-02-20 02:20:07 UTC
commit 7cc3d846f42da60bb9a5232e0afc5afea435e7f5
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Feb 19 21:19:04 2013 -0500

    compositor-x11: Only try to fullscreen if WM has _NET_WM_STATE_FULLSCREEN
    
    If the window manager doesn't support _NET_WM_STATE_FULLSCREEN, the
    fullscreen protocol won't work and we end up waiting indefintely for a
    confiure event that doesn't come.
    
    Only try to fullscreen if we have _NET_WM_STATE_FULLSCREEN, and only
    wait for map if we're fullscreen.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=61133
Comment 2 U. Artie Eoff 2013-02-20 17:15:14 UTC
(In reply to comment #1)
> commit 7cc3d846f42da60bb9a5232e0afc5afea435e7f5
> Author: Kristian Høgsberg <krh@bitplanet.net>
> Date:   Tue Feb 19 21:19:04 2013 -0500
> 
>     compositor-x11: Only try to fullscreen if WM has _NET_WM_STATE_FULLSCREEN
>     
>     If the window manager doesn't support _NET_WM_STATE_FULLSCREEN, the
>     fullscreen protocol won't work and we end up waiting indefintely for a
>     confiure event that doesn't come.
>     
>     Only try to fullscreen if we have _NET_WM_STATE_FULLSCREEN, and only
>     wait for map if we're fullscreen.
>     
>     https://bugs.freedesktop.org/show_bug.cgi?id=61133

Did this get pushed to master, yet?
Comment 3 Kristian Høgsberg 2013-02-20 18:01:53 UTC
It's there now, sorry.

On Wed, Feb 20, 2013 at 12:15 PM,  <bugzilla-daemon@freedesktop.org> wrote:
> Comment # 2 on bug 61133 from U. Artie Eoff
>
> (In reply to comment #1)
>> commit 7cc3d846f42da60bb9a5232e0afc5afea435e7f5
>> Author: Kristian Høgsberg <krh@bitplanet.net>
>> Date:   Tue Feb 19 21:19:04 2013 -0500
>>
>>     compositor-x11: Only try to fullscreen if WM has
>> _NET_WM_STATE_FULLSCREEN
>>
>>     If the window manager doesn't support _NET_WM_STATE_FULLSCREEN, the
>>     fullscreen protocol won't work and we end up waiting indefintely for a
>>     confiure event that doesn't come.
>>
>>     Only try to fullscreen if we have _NET_WM_STATE_FULLSCREEN, and only
>>     wait for map if we're fullscreen.
>>
>>     https://bugs.freedesktop.org/show_bug.cgi?id=61133
>
> Did this get pushed to master, yet?
>
> ________________________________
> You are receiving this mail because:
>
> You are the assignee for the bug.
>
>
> _______________________________________________
> Wayland-bugs mailing list
> Wayland-bugs@lists.freedesktop.org
> http://lists.freedesktop.org/mailman/listinfo/wayland-bugs
>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.